--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -6,3 +6,23 @@
     display: flex;
     justify-content: center;
 }
+
+.infoBox .MuiCard-root {
+  background: rgba(255, 255, 255, 0.07);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  border-radius: 20px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(240, 240, 239, 0.5);
+  color: #ffffff;
+  transition: all 0.3s ease-in-out;
+}
+
+.infoBox .MuiCard-root p {
+    color: #f1f1f1;
+}
+
+.MuiCard-root:hover {
+  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.6);
+  transform: scale(1.01);
+}
