--- a/src/WeatherApp.css
+++ b/src/WeatherApp.css
@@ -1,23 +1,7 @@
 .weatherApp {
     text-align: center;
-}
-
-.weather-container.cold {
-    background: linear-gradient(#a0c4ff, #d0f4ff);
-    color: #003366;
-}
-
-.weather-container.mild {
-    background: linear-gradient(#fef9c3, #fde68a);
-    color: #5b3700;
-}
-
-.weather-container.warm {
-    background: linear-gradient(#ffd6a5, #ffb347);
-    color: #7a2e00;
-}
-
-.weather-container.hot {
-    background: linear-gradient(#ff5e5e, #ff0000);
-    color: #ffffff;
+    height: 100vh;
+    background: linear-gradient(to bottom right, #0a2d2e,  #144d4d, #145a32 );
+    color: white;
+    transition: background 0.5s ease-in-out;
 }
