--- a/src/SearchBox.css
+++ b/src/SearchBox.css
@@ -2,3 +2,34 @@
     text-align: center;
     margin: 15px;
 }
+
+.textField input{
+    color: aliceblue;
+}
+
+.textField label{
+    color: aliceblue;
+}
+
+.searchForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.searchButton {
+  background-color: #1b6b6b;
+  color: white;
+}
+
+.searchButton:hover {
+  background-color: #145a32;
+}
+
+/* For chrome auto fill styling override */
+.textField input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px rgba(255, 255, 255, 0) inset !important;
+  -webkit-text-fill-color: white !important;
+  transition: background-color 5000s ease-in-out 0s;
+}
